--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                             </button>
                         </li>
                         <li class="nav-item re-margin m-1">
-                            <button id="featuresBtn" onclick="goToPage(this)" type="button"
+                            <button id="aboutBtn" onclick="goToPage(this)" type="button"
                                 class="pagesBtn btn btn-primary d-flex flex-row">
                                 <i class="bi bi-file-earmark-bar-graph-fill"></i>
-                                <div class="px-2 translate-top-2px">Features</div>
+                                <div class="px-2 translate-top-2px">About</div>
                             </button>
                         </li>
                         <li class="nav-item m-1">
@@ -150,23 +150,6 @@
         <div class="pages azanPage none" id="azanPage">
             <div class="container" style="width:100%;overflow-x:hidden;">
                 <div class="collapse show">
-                    <div class="alert alert-light border bold" role="alert" id="boxRemember">
-                        <h4 class="text-center my-1">Remember ! </h4><br>
-                        <div class="flex-right">
-                            <button class="btn btn-close" onclick="this.parentElement.parentElement.remove()"></button>
-                        </div>
-                        <li>
-                            If country is wrong, data will be shown accordion to city name, now city is <span
-                                id="cityOf"></span><br></li>
-                        <li>If you select any city that not in your country, you will probably get
-                            wrong timings</li>
-                        <li>Sometimes adhan or azan times can be few minutes difference, specially in fazr and asar for
-                            multiple calculation methods. Now calculated according to popular method <span
-                                class="spanRed">(Muslim World League)</span></li>
-                        <li>If stack network or other issue, just <a class="pointer px-1 mx-2 btn-sm"
-                                onclick="toReload()">Reload</a> or more good will be to reset<a
-                                class="pointer px-1 mx-2 btn-sm" onclick="resetPage()">Reset</a></li>
-                    </div>
                     <div class="d-flex align-items-center justify-content-around" id="enterBox">
                         <p class="my-5 w-45">Select your country</p>
                         <p class="my-5 w-45">Enter your city</p>
@@ -497,10 +480,31 @@
 
 
         </div>
-        <!-- features page -->
-        <div class="pages featuresPage none" id="featuresPage">
-            <div class="container">
-                <h1 class="my-5">Currently nothing in this page</h1>
+        <!-- about page -->
+        <div class="pages aboutPage none" id="aboutPage">
+            <div class="container p-4 about-boxes">
+                <div class="boxRemember">
+                    <h5 class="text-center">You must know</h5>
+                    <li>After reload, you should touch any where at least one time to keep sound on from mute</li>
+                    <li>This web apps some features like audio sound do not automatically ring sometimes in mobile
+                        phones</li>
+                    <li>If you found any issue, please <a class="pointer px-1 mx-2 btn-sm"
+                            onclick="resetPage()">Reset</a></span> this apge</li>
+                </div>
+                <div class="boxRemember">
+                    <h5 class="text-center">Related Azan Timings</h5>
+                    <li>
+                        If country is wrong, data will be shown accordion to city name, now city is <span
+                            id="cityOf"></span><br></li>
+                    <li>If you select any city that not in your country, you will probably get
+                        wrong timings</li>
+                    <li>Sometimes adhan or azan times can be few minutes difference, specially in fazr and asar for
+                        multiple calculation methods. Now calculated according to popular method <span
+                            class="spanRed">(Muslim World League)</span></li>
+                    <li>If stack network or other issue, just <a class="pointer px-1 mx-2 btn-sm"
+                            onclick="toReload()">Reload</a> or more good will be to reset<a
+                            class="pointer px-1 mx-2 btn-sm" onclick="resetPage()">Reset</a></li>
+                </div>
             </div>
         </div>
 
@@ -538,9 +542,11 @@
 
                                 <button class="tackle toneTackle1 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
                                     id="playAudio1"><i class="px-1 bi bi-play translate-top-2px"></i>Play</button>
-                                <button disabled class="tackle toneTackle1 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
+                                <button disabled
+                                    class="tackle toneTackle1 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
                                     id="pauseAudio1"><i class="px-1 bi bi-pause translate-top-2px"></i>Pause</button>
-                                <button disabled class="tackle toneTackle1 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
+                                <button disabled
+                                    class="tackle toneTackle1 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
                                     id="stopAudio1"><i class="px-1 bi bi-stop-fill translate-top-2px"></i>Stop</button>
                                 <!-- alarm tone setting -->
                                 <p class="bold mTB10">Alarm Ringtone</p>
@@ -555,9 +561,11 @@
                                 </select>
                                 <button class="tackle toneTackle2 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
                                     id="playAudio2"><i class="px-1 bi bi-play translate-top-2px"></i>Play</button>
-                                <button disabled class="tackle toneTackle2 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
+                                <button disabled
+                                    class="tackle toneTackle2 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
                                     id="pauseAudio2"><i class="px-1 bi bi-pause translate-top-2px"></i>Pause</button>
-                                <button disabled class="tackle toneTackle2 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
+                                <button disabled
+                                    class="tackle toneTackle2 btn btn-sm btn-secondary px-2 py-0 mt-2 white"
                                     id="stopAudio2"><i class="px-1 bi bi-stop-fill translate-top-2px"></i>Stop</button>
                                 <!-- some settings of alarm -->
                                 <p class="bold mTB10">Alarms setting</p>
@@ -572,11 +580,13 @@
                                 <!-- some settings of azan -->
                                 <p class="bold mTB10">Azans Setting</p>
                                 <hr>
-                                <p class="col-red"><b>That means adhans or azans will stay turned on from next time until you manually turn off</b></p>
+                                <p class="col-red"><b>That means adhans or azans will stay turned on from next time
+                                        until you manually turn off</b></p>
                                 <div class="form-check form-switch">
                                     <input class="form-check-input switch-input-left" type="checkbox" role="switch"
                                         id="autoTurnOnAzan" onclick="setAutoTurnOnAzanOnOrOff(this)">
-                                    <label class="form-check-label switch-label-right" for="autoTurnOnAzan">Auto Turn On Azan</label>
+                                    <label class="form-check-label switch-label-right" for="autoTurnOnAzan">Auto Turn On
+                                        Azan</label>
                                 </div>
                                 <!-- reset and others -->
                                 <h5 class="text-center mTB18">Reset and Others</h5>
@@ -799,16 +809,19 @@
                 <div class="modal-content mode-changable-light">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="staticBackdropLabel">Alert</h1>
-                        <button type="button" class="btn-close mobileDetectedOk" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close mobileDetectedOk" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
                     </div>
 
                     <div class="modal-body">
-                        <h4>This web app's some features only work on computers, so we recommend to use this app on computer</h4>
-                        
+                        <h4>This web app's some about only work on computers, so we recommend to use this app on
+                            computer</h4>
+
                     </div>
 
                     <div class="modal-footer">
-                        <button class="mobileDetectedOk btn btn-success" type="button" data-bs-dismiss="modal">Ok</button>
+                        <button class="mobileDetectedOk btn btn-success" type="button"
+                            data-bs-dismiss="modal">Ok</button>
                     </div>
                 </div>
             </div>
