--- a/index.html
+++ b/index.html
@@ -814,8 +814,8 @@
                     </div>
 
                     <div class="modal-body">
-                        <h4>This web app's some about only work on computers, so we recommend to use this app on
-                            computer</h4>
+                        <h4>This web app's some features only work on computers, so we recommend to use this app on
+                            computer, and it will not work properly in mobile phones</h4>
 
                     </div>
 
