fixed issue and bugs

--- a/index.html
+++ b/index.html
@@ -482,17 +482,42 @@
         </div>
         <!-- about page -->
         <div class="pages aboutPage none" id="aboutPage">
-            <div class="container p-4 about-boxes">
-                <div class="boxRemember">
-                    <h5 class="text-center">You must know</h5>
+            <div class="container p-4">
+                <div class="boxRemember w-100 px-5 my-5 bold flex-center-col">
+                    <h3 class="my-3" style="font-family: Arial, Helvetica, sans-serif;">We recommend to use any of these
+                        two browser</h5>
+                    <li><a target="_blank" class="link-a" href="https://www.google.com/chrome/?brand=YTUH&gclid=Cj0KCQiA2-2eBhClARIsAGLQ2Rl5fv1F903ajs63DrbBFjM2mqSd6KGYVcrH_NE9NORdenH0SY9WZvIaAvcSEALw_wcB&gclsrc=aw.ds">Google Chrome (Chrome)</a></li>
+                    <li><a target="_blank" class="link-a" href="https://www.mozilla.org/en-US/firefox/new/">Mozilla Firefox (Firefox)</a></li>
+                </div>
+                <div class="boxRemember w-100 px-5 my-5 bold">
+                    <h3 class="my-3 text-center">How to Turn on sound for permanently for this web app</h5>
+
+                    <h4 class="text-center py-5 bold">Google Chrome Browser (Highly recommended)</h5>
+                    <li>Left side of this website url / link , click on the <b>lock icon (view site
+                            information)</b></li>
+                    <li>From the below click on <b>site settting</b></li>
+                    <li>After a new page open, you will find many options for permission, findout <b>sound
+                            option and Allow it</b></li>
+
+                    <h4 class="text-center py-5 bold">Mozilla Firefox Browser</h5>
+                    <li>Left side of this website url / link , click on the <b>lock icon</b></li>
+                    <li>Click on <b>Connection secure</b></li>
+                    <li>From the below click on <b>More information</b></li>
+                    <li>Then Click on Permisson</li>
+                    <li>Fifth option from the list named Autoplay, uncheck <b>Use Default</b> and check /
+                        click on <b>Allow Audio and Video</b></li>
+
+                </div>
+                <div class="boxRemember w-100 px-5 my-5 bold">
+                    <h3 class="text-center my-3">You must know</h5>
                     <li>After reload, you should touch any where at least one time to keep sound on from mute</li>
                     <li>This web apps some features like audio sound do not automatically ring sometimes in mobile
                         phones</li>
                     <li>If you found any issue, please <a class="pointer px-1 mx-2 btn-sm"
                             onclick="resetPage()">Reset</a></span> this apge</li>
                 </div>
-                <div class="boxRemember">
-                    <h5 class="text-center">Related Azan Timings</h5>
+                <div class="boxRemember w-100 px-5 my-5 bold">
+                    <h3 class="text-center">Related Azan Timings</h5>
                     <li>
                         If country is wrong, data will be shown accordion to city name, now city is <span
                             id="cityOf"></span><br></li>
