--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 
 
     <!-- links and scripts -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    <script src="js/jquery.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
